@@ -8,6 +8,8 @@ PHP                                                                        NEWS
   functions. (Andrey)
 - Fixed a bug where exec() on Windows would eat the first and last double quotes
   (Scott)
+- Fixed bug #45312 (Segmentation fault on second request for array functions).
+  (Dmitry)
 - Fixed bug #45251 (double free or corruption with setAttributeNode()). (Rob)
 - Fixed bug #45139 (ReflectionProperty returns incorrect declaring class). (Felipe)
 - Fixed bug #45004 (pg_insert() does not accept 4 digit timezone format).
